# YTArchiver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_MAP.md  README.md  YT Archiver v10.6.py  YT Archiver v11.1.py  YT Archiver v11.8.py  YT Archiver v11.9.py  YT Archiver v12.2.py  YT Archiver v12.3.py  YT Archiver v12.4.py  YT Archiver v12.5.py  YT Archiver v12.7.py  YT Archiver v12.8.py  YT Archiver v13.0.py  YT Archiver v13.1.py  YT Archiver v13.2.py  YT Archiver v13.3.py  YT Archiver v13.4.py  YT Archiver v13.5.py  YT Archiver v13.7.py  YT Archiver v14.0.py  YT Archiver v14.1.py  YT Archiver v14.3.py  YT Archiver v14.4.py  YT Archiver v14.5.py  YT Archiver v14.7.py  YT Archiver v14.8.py  YT Archiver v15.0.py  YT Archiver v15.1.py  YT Archiver v15.3.py  YT Archiver v15.6.py  YT Archiver v15.7.py  YT Archiver v15.8.py  YT Archiver v15.9.py  YT Archiver v16.0.py  YT Archiver v7.1.py  YT Archiver v7.2.py  (+26 more)
backend/: __init__.py  archive_capacity.py  archive_scan.py  auto_backup.py  autorun.py  channel_art.py  channel_cache.py  cmd_server.py  compress.py  deps_installer.py  disk_watch.py  drift_scan.py  fmt_utils.py  fs_attrs.py  fs_safety.py  fs_search.py  html_assembler.py  index.py  index_bookmarks.py  index_graph.py  index_maintenance.py  index_search.py  livestreams.py  local_fileserver.py  log.py  log_stream.py  metadata.py  metadata_io.py  net.py  pause_helpers.py  proc_utils.py  process_runner.py  provenance.py  punct_alignment.py  punct_restore.py  punct_worker.py  queues.py  redownload.py  reorg.py  repair_captions.py  (+17 more)
backend/api_mixins/: README.md  __init__.py  _shared.py  archive_mixin.py  backup_mixin.py  bookmark_mixin.py  browse_mixin.py  channel_mixin.py  (+18 more)
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_MAP.md  requirements.txt
scripts/: check.sh  smoke.py
tests/: test_backend_smoke.py  test_imports.py
web/: README.md  aboutDialog.js  activityLogVis.js  app.js  appDialogs.js  autoSync.js  autorunHistory.js  bookmarks.js  bridge.js  browseContent.js  browseContextMenus.js  browseGrids.js  browseSearch.js  browseState.js  browseView.js  chrome.js  clearButton.js  columnSort.js  columnWidth.js  commandPalette.js  compressDryRunDialog.js  contextMenu.js  diagnosticsDialog.js  downloadDragDrop.js  downloadUrl.js  driftScanDialog.js  dropdown.js  editChannel.js  graphTab.js  index.html  index.template.html  indexControls.js  liveDrawer.js  logContextMenu.js  logMode.js  logs.js  manualReview.js  manualTranscribe.js  manualView.js  metadataTab.js  (+40 more)
(+46 files in other folders)
