# pyproject.toml — Python project metadata + tool config.
#
# YTArchiver is shipped as a PyInstaller-bundled exe, not as a pip
# package, so this file exists for tooling and discoverability rather
# than `pip install .`. Notable consumers:
#   - ruff reads `[tool.ruff]` here when no top-level `ruff.toml` is
#     present. We keep `ruff.toml` for now (it's already configured);
#     this file just declares the project shape for other tools.
#   - pytest reads `[tool.pytest.ini_options]` so `pytest tests/`
#     discovers the smoke suite from the repo root.
#   - IDEs (VS Code, PyCharm) read this for the Python version and
#     dependency list when populating their analysis.
#
# DO NOT add a build-system section unless you actually want to make
# YTArchiver pip-installable — the app is launched via main.py, not
# imported as a package.

[project]
name = "ytarchiver"
version = "73.8"
description = "Subscription-based YouTube channel archiver with local Whisper transcription, FTS5 transcript search, and a pywebview UI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "skurbee" }]
keywords = ["youtube", "archive", "yt-dlp", "whisper", "transcription", "pywebview"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "pywebview>=6.2,<7",
    "pystray>=0.19,<0.20",
    "Pillow>=11,<13",
    "psutil>=7,<8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[project.urls]
Homepage = "https://github.com/skurbee/YTArchiver"
Repository = "https://github.com/skurbee/YTArchiver"
Changelog = "https://github.com/skurbee/YTArchiver/blob/main/docs/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers"]

# Note: ruff settings live in `ruff.toml` at the repo root (already
# configured). If you remove that file, copy the [tool.ruff] block here
# instead.
